# thatorthis

./: .env  .gitignore  App.vue  README.md  constants.ts  nuxt.config.ts  package.json  quasar.config.js  utils.ts
.nuxt/: app.config.mjs  components.d.ts  imports.d.ts  nuxt.d.ts  nuxt.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/pwa/: sw.js
.nuxt/types/: imports.d.ts  layouts.d.ts  middleware.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts  schema.d.ts  supabase.d.ts
apis/: index.ts  question.ts  unsplash.ts
assets/css/: _colors.scss  base.scss
client/: README.md  package.json
components/: CreateBalanceForm.vue  CreateBalanceFormOption.vue  ImageSelectModal.vue  OptionCard.vue  ProfileIcon.vue  ProfileMenu.vue  QuestionCard.vue  QuestionCardOption.vue  ReasonModal.vue  TrendingSection.vue
components/shares/: TotInput.vue  TotModal.vue  TotShadowCard.vue
composables/: use-service.ts
composables/services/: auth.ts  image.ts  index.ts  question.ts  symbols.ts
composables/use-service/: auth.ts  index.ts  question.ts
daos/: image.ts  index.ts  question.ts
layouts/: default.vue  empty.vue
modals/: ImageSelectModal.vue  ReasonModal.vue
pages/: activities.vue  create.vue  index.vue  login.vue  mypage.vue
plugins/: vue-final-modal.ts
server/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/scripts/: compose-up.sh  run-dev.sh  run-prod.sh
src/boot/: vue-query.ts
src/composables/use-service/: index.ts
