[tool.poetry]
name = "thatorthis"
version = "0.1.0"
description = "thatorthis is a social media platform based on 'this or that' game"
authors = ["sjquant <seonujang92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.6"
pyjwt = "^2.6.0"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
ruff = "0.0.257"
black = "23.1.0"
mypy = "1.1.1"
pytest = "^7.2.2"
pytest-env = "^0.8.1"
pytest-cov = "^4.0.0"
pytest-alembic = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
disallow_untyped_decorators = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
pretty = true 
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.ruff]
extend-ignore = ["I001"] 
line-length = 100
fix = true
exclude = ["**/versions/**"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env=[]